tests/baselines/reference/constructorDefaultValuesReferencingThis.errors.txt
==== tests/cases/compiler/constructorDefaultValuesReferencingThis.ts (3 errors) ====
    class C {
        constructor(x = this) { }
                        ~~~~
!!! error TS2155: 'this' cannot be referenced in constructor arguments.
    }
    
    class D<T> {
        constructor(x = this) { }
                        ~~~~
!!! error TS2155: 'this' cannot be referenced in constructor arguments.
    }
    
    class E<T> {
        constructor(public x = this) { }
                               ~~~~
!!! error TS2155: 'this' cannot be referenced in constructor arguments.
    }